# Kairos

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: AUTODL_GUIDE.md  AUTODL_REMOTE_TRAINING_GUIDE.md  BACKTEST_IC_GUIDE.md  BACKTEST_IC_INTERPRETATION_GUIDE.md  CONCEPTS_AND_GLOSSARY.md  CRYPTO_5_15_30_FACTOR_SCHEMA_PROPOSAL.md  CRYPTO_BTC_ETH_2Y_SPOT_RUN.md  CRYPTO_BTC_ETH_RUN.md  CRYPTO_BTC_ETH_TOKENIZER_RUN.md  CRYPTO_DATA_SOURCE_AND_EXCHANGE_GUIDE.md  CRYPTO_GUIDE.md  CRYPTO_OKX_PERP_MULTICHANNEL_PLAN.md  CRYPTO_OKX_PERP_TOP10_30D_RUN_POSTMORTEM.md  CRYPTO_OKX_SPOT_PERP_EXOGENOUS_PLAN.md  CRYPTO_PERP_PLAN.md  CRYPTO_PERP_TOP10_30D.md  CRYPTO_TOKENIZER_RUN.md  CRYPTO_TOP100_1Y_SPOT_RUN.md  CRYPTO_TOP100_RUN.md  DOCUMENTATION_INDEX.md  GLOSSARY.md  PROJECT_ROADMAP_AND_NEXT_STEPS.md  SERVE_HTTP_API.md  TRAINING_TUNING_PLAYBOOK.md  TUNING_PLAYBOOK.md
examples/: crypto_top100_universe.md  inference_quickstart.py
kairos/: __init__.py
kairos/data/: __init__.py  collect.py  common_features.py  crypto_extras.py  features.py  prepare_dataset.py
kairos/data/markets/: __init__.py  ashare.py  base.py  crypto.py
kairos/data/markets/crypto_exchanges/: __init__.py  base.py  binance_vision.py  okx.py
kairos/deploy/: __init__.py  push_to_hf.py  serve.py
kairos/models/: __init__.py  kronos_ext.py
kairos/training/: __init__.py  backtest_ic.py  config.py  dataset.py  eval_tokenizer.py  train_predictor.py  train_tokenizer.py
kairos/utils/: __init__.py  training_utils.py
scripts/: autodl_bootstrap.sh  package_and_upload.sh  smoke_crypto_extras.py
tests/: test_ashare_adapter.py  test_binance_vision.py  test_crypto_adapter.py  test_features.py  test_multi_market.py
